M2 accept ADR-0028 after 84-test gate