@@ -1,11 +1,11 @@
 # ADR-0028 — Contrat de lecture provider unifié et résultats partiels explicites
 
-- Statut : **Proposée — validation M2-S6 requise**
+- Statut : **Acceptée — M2**
 - Date : 22 juillet 2026
 - Dépend de : ADR-0001, ADR-0002, ADR-0011, ADR-0022, ADR-0024, ADR-0025
 - Portée : lecture provider, ingestion partielle, diagnostics
 
-## Décision candidate
+## Décision
 
 Séparer :
 
@@ -64,15 +64,17 @@ ARCHIVES
 
 Les groupes current/change/deltas sont lus indépendamment afin qu'un groupe en échec ne masque pas automatiquement les autres groupes lisibles.
 
-`openspec-partial` doit produire :
+`openspec-partial` produit :
 
 ```text
-CURRENT_SPECIFICATIONS = READ
-REQUIREMENTS           = READ  (2)
-SCENARIOS              = PARTIAL (1)
-CHANGES                = ABSENT
+CURRENT_SPECIFICATIONS = READ      (1)
+REQUIREMENTS           = READ      (2)
+SCENARIOS              = PARTIAL   (1)
+CHANGES                = ABSENT    (0)
 PARTIAL_INGESTION
 ```
+
+Les éléments valides restent accessibles malgré la lecture partielle.
 
 ## AcceptanceCriterion
 
@@ -111,16 +113,47 @@ FAILED -> INVALID_SOURCE ou diagnostic du probe
 
 Une catégorie `ABSENT` n'est pas une erreur.
 
-## Critère d'acceptation
+## Preuve d'acceptation — 22 juillet 2026
 
-ADR-0028 passe à **Acceptée — M2** lorsque :
+Gate exécuté sous Windows :
 
-1. `openspec-basic` produit `READ` pour toutes les catégories M2 implémentées ;
+```text
+.\mvnw.cmd clean test
+Windows 10 x64
+Apache Maven 3.9.16
+JDK 24.0.1
+javac release 21
+```
+
+Résultats observés :
+
+```text
+ProviderReadContractTest                   3/3 PASS
+OpenSpecSpecificationContentReaderTest     5/5 PASS
+
+Domain module                              4 tests
+Application module                        38 tests
+OpenSpec provider                         26 tests
+SQLite store                               6 tests
+Architecture tests                        10 tests
+
+TOTAL                                     84/84 PASS
+Failures                                      0
+Errors                                        0
+Skipped                                       0
+BUILD SUCCESS
+```
+
+Les critères d'acceptation sont démontrés :
+
+1. `openspec-basic` produit `READ` pour les catégories M2 implémentées ;
 2. `openspec-partial` conserve 2 requirements et 1 scenario avec `SCENARIOS=PARTIAL` ;
 3. `CHANGES=ABSENT` est distinct de `UNSUPPORTED` ;
-4. les 5 statuts sont testés ;
+4. les cinq statuts sont testés ;
 5. une source malformée produit `FAILED` sans exception sortante ;
 6. un probe incompatible retourne aucun contenu et un échec explicite ;
 7. AcceptanceCriterion reste non dérivé ;
 8. les contrats applicatifs ne contiennent aucun type OpenSpec ;
-9. `.\mvnw.cmd clean test` est vert.
+9. le build complet est vert.
+
+Les warnings JDK 24 `--enable-native-access=ALL-UNNAMED` de SQLite et SLF4J NOP d'ArchUnit restent non bloquants et ne justifient aucune dépendance de production supplémentaire à ce stade.
